--- a/desafios/desafio010 - Copia, adaptaçao de video iframe/style.css
+++ b/desafios/desafio010 - Copia, adaptaçao de video iframe/style.css
@@ -31,7 +31,7 @@ header {
     min-height: 150px;
     padding-top: 40px;
     text-align: center;
-    
+    box-shadow: 0px 40px 12px rgba(0, 0, 0, 0.555);    
 
 }
 header h1 {
@@ -76,7 +76,7 @@ main {
     margin: auto;
     
     min-width: 300px;
-    max-width: 800px;
+    max-width: 817px;
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.534);
     border-bottom-right-radius: 10px;
@@ -166,19 +166,15 @@ aside > ul {
     columns: 2;
 }
 
-
-
-
-
-
-
-
 abbr {
-    text-decoration: underline;
+    text-decoration: none;
     
 }
 footer {
     background-color: var(--cor5);
     text-align: center;
     color: white;
+}
+footer >p {
+    font-weight: bold;
 }
