--- a/desafios/desafio010 - Copia, adaptaçao de video iframe/style.css
+++ b/desafios/desafio010 - Copia, adaptaçao de video iframe/style.css
@@ -52,7 +52,6 @@ header p {
     padding-right: 10px;
     padding-left: 10px;
     
-
 }
 nav {
     background-color:var(--cor4);
@@ -83,7 +82,6 @@ main {
     border-bottom-left-radius: 10px;
     margin-bottom: 30px;
 
-
 }
 div.video {
     background-color: var(--cor5);
@@ -111,9 +109,7 @@ img {
 }
 main h1 {
     font-family: var(--fonte-android);
-    color: var(--cor4);
-    
-    
+    color: var(--cor4); 
 }  
 
 main h2 {
@@ -168,13 +164,16 @@ aside > ul {
 
 abbr {
     text-decoration: none;
-    
 }
 footer {
+    padding-top: 4px;
     background-color: var(--cor5);
     text-align: center;
     color: white;
 }
 footer >p {
     font-weight: bold;
+}
+footer::before {
+    content: '\00A9';
 }
