--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -7,7 +7,9 @@
     padding: 0px;
     margin: 0px;
 }
-
+html,body {
+    height: 100vh;
+}
 header {
     height: 150px;
     padding: 10px;
@@ -17,10 +19,13 @@ header {
     margin: -10px -15px 0px ;
 }
 header > h1 {
-    margin-top: 60px;
+    margin-top: 50px;
     font-family: 'Passion One', cursive;
     font-weight: 700;
-    font-size: 2.5em;
+    font-size: 5vw;
+}
+header> p {
+    margin-bottom: 50px;
 }
 header a {
     text-decoration: none;
@@ -35,7 +40,7 @@ header a:hover {
 main p {
     font-family: 'Sriracha', cursive;
     padding: 25px;
-    
+    font-size: 3vw;
     
 }
 .joaninha {
@@ -44,7 +49,6 @@ main p {
     padding: 10px;
     background:black url('imagens/background001.jpg') center right no-repeat fixed;
     background-size: cover;
-    width: 100%;
     margin-top: 30px;
     padding: 10px;
     
@@ -60,7 +64,7 @@ main p {
 }
 
 section p {
-    
+    display: inline-block;
     color: white;
     background-color: rgba(0, 0, 0, 0.39);
     padding: 10px;
