--- a/exercicios/ex026/mq04/estilos/style.css
+++ b/exercicios/ex026/mq04/estilos/style.css
@@ -15,7 +15,7 @@ html {
 
 }
 body {
-    background: black url(../back-phone.jpg) no-repeat  center  ;
+    background: black url(../imagens/back-phone.jpg) no-repeat  center  ;
     background-size: cover;
 }
 main {
