--- a/exercicios/ex026/mq04/mdeia-query/style.css
+++ b/exercicios/ex026/mq04/mdeia-query/style.css
@@ -14,7 +14,7 @@ telas grandes: 1200px
 
     }
     body {
-        background-image: url(../back-print.jpg);
+        background-image: url(../imagens/back-print.jpg);
     }
     h1 {
         text-shadow: none;
@@ -44,7 +44,7 @@ telas grandes: 1200px
 
  @media screen and (min-width: 768px) and (max-width: 992px) { /*TABLET*/
     body {
-        background-image: url(../back-tablet.jpg);
+        background-image: url(../imagens/back-tablet.jpg);
     }
     img {
         display: block;
@@ -69,7 +69,7 @@ telas grandes: 1200px
 
 @media screen and (min-width: 992px) and (max-width: 1200px){ /*DESKTOP*/
     body {
-        background-image: url(../back-pc.jpg);
+        background-image: url(../imagens/back-pc.jpg);
     }
     img {
         display: block;
@@ -94,7 +94,7 @@ telas grandes: 1200px
 
 @media screen and (min-width: 1200px){ /*TELAS GRANDE (TV)*/
     body {
-        background-image: url(../back-tv.jpg);
+        background-image: url(../imagens/back-tv.jpg);
     }
     img {
         display: block;
